<resources>
    <string name="app_name" translatable="false">Don’t touch my phone</string>

    <string name="retry_internet">Retry internet</string>
    <string name="click_back">Click back again to exit</string>
    <string name="no_internet">No Internet</string>
    <string name="check_connection_settings_and_try_again">Check connection settings and try again.</string>

    <string name="select_language">Select language</string>
    <string name="done">Done</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_title_1">Activate</string>
    <string name="intro_content_1">Nobody touch your phone</string>
    <string name="intro_title_2">Detect motion </string>
    <string name="intro_content_2">Whenever someone touch phone</string>
    <string name="intro_title_3">Diversity</string>
    <string name="intro_content_3">Of ring alarm sound effects</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="don_t_touch_my_phone">Don’t touch my phone</string>
    <string name="collection">Collection</string>
    <string name="more">More</string>
    <string name="not_have_email_app_to_send_email">Not have email app to send email!</string>
    <string name="language">Language</string>
    <string name="share_app">Share App</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="more_app">More App</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="extension">Extension</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="light_up_the_screen_when_searching">Light up the screen when searching</string>
    <string name="set_don_t_touch_my_phone_wallpaper">Set Don’t touch my phone wallpaper</string>
    <string name="select_flash_type">Select flash type</string>
    <string name="select_vibrate_type">Select vibrate type</string>
    <string name="setting">Setting</string>
    <string name="rate_app">Rate App</string>
    <string name="title_how_to_use">To learn how to use this app, please read the guide below</string>
    <string name="how_to_use">How to Use</string>
    <string name="title_how_to_use_1">Tap the sound to activate the Don’t touch my phone feature.</string>
    <string name="title_how_to_use_2">If someone arbitrarily moves your phone, the App will detect that action and start ringing.</string>
    <string name="title_how_to_use_3">Before activating, you can set the flashling, volume, duration as you like.</string>
    <string name="flash_type">Flash type</string>
    <string name="vibrate_ringtone">Vibrate ringtone</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="apply">Apply</string>
    <string name="wallpaper_has_been_set_successfully">Wallpaper has been set successfully!</string>
    <string name="setting_wallpaper_failed">Setting wallpaper failed!</string>
    <string name="full_battery_detection">Full Battery Detection</string>
    <string name="enable_alarm_on_full_battery">Enable alarm on full battery</string>
    <string name="battery_info">Battery Info</string>
    <string name="battery">Battery</string>
    <string name="technology">Technology</string>
    <string name="health">Health</string>
    <string name="status">Status</string>
    <string name="voltage">Voltage</string>
    <string name="temperature">Temperature</string>
    <string name="capacity">Capacity</string>
    <string name="cold">Cold</string>
    <string name="dead">Dead</string>
    <string name="good">Good</string>
    <string name="over_voltage">Over Voltage</string>
    <string name="over_heat">Over Heat</string>
    <string name="unspecified">Unspecified</string>
    <string name="charging">Charging</string>
    <string name="discharging">Discharging</string>
    <string name="full">Full</string>
    <string name="charger_unplug_detection">Charger Unplug Detection</string>
    <string name="txt_content_unplug_pin">By enabling this your phone will start ringing if someone try to unplug the phone.</string>
    <string name="you_must_connect_charger_first">You must connect charger first</string>
    <string name="clap_to_find_home">Clap\nto find</string>
    <string name="clap_to_find">Clap to find</string>
    <string name="activate">Activate</string>
    <string name="police">Police</string>
    <string name="doorbell">Doorbell</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="o_clock">O’Clock</string>
    <string name="harp">Harp</string>
    <string name="laughing">Laughing</string>
    <string name="hello">Hello</string>
    <string name="rooster">Rooster</string>
    <string name="sneeze">Sneeze</string>
    <string name="whistle">Whistle</string>
    <string name="train">Train</string>
    <string name="piano">Piano</string>
    <string name="wind_chime">Wind Chime</string>
    <string name="error">Error</string>
    <string name="enable_flash_alert">Enable Flash Alert</string>
    <string name="enable_vibrate">Enable Vibrate</string>
    <string name="sound">Sound</string>
    <string name="volume">Volume</string>
    <string name="duration">Duration</string>
    <string name="unplug_charged_home">Unplug\nCharged</string>
    <string name="full_charged_home">Full\nCharged</string>
    <string name="tap_to_active">Tap to active</string>
    <string name="tap_to_deactive">Tap to deactive</string>
    <string name="custom_sound">Custom Sound</string>
    <string name="tap_to_record">Tap to record</string>
    <string name="save">Save</string>
    <string name="retry">Retry</string>
    <string name="quit_title">Quit?</string>
    <string name="quit_txt">Quit</string>
    <string name="txt_content_quit_editing">You are editing. Do you want to close and cancel all editing?</string>
    <string name="txt_content_quit_recording">You are recording. Are you sure you want to quit?</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="cancel">Cancel</string>
    <string name="name_must_not_null">Name must not null.</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="txt_content_delete_audio">Do you confirm that you want to delete</string>
    <string name="overlay_permission_enable">Overlay permission enable</string>
    <string name="title_dialog_overlay_permission">Charging animation needs permission to draw over other apps. This application is not gathering any information related to your phone.</string>
    <string name="go_to_setting">Go to setting</string>
    <string name="permission_denied">Permission denied</string>
    <string name="stop">Stop</string>
    <string name="detects_when_user_claps">Detects when user claps</string>
    <string name="defaut">Defaut</string>
    <string name="permission">Permission</string>
    <string name="txt_content_frame_audio_permission">The app need to use Permission to provide the ability to record</string>
    <string name="record_audio_permission">Record audio permission</string>
    <string name="continue_txt">Continue</string>
    <string name="delete_successfully">Delete successfully</string>
    <string name="recording">Recording</string>
    <string name="ok_txt">OK</string>
    <string name="active_successfully">Active Successfully</string>
    <string name="more_help">More Help</string>
    <string name="lock_screen_display">Lock screen display</string>
    <string name="set_now">Set now</string>
    <string name="content_information_more_help">Xiami, Oppo, Vivo, OnePlus and other mobile phones need to enable \"Lock screen\" permission to display warning screen on lock screen page normally.</string>
    <string name="content_more_help"><![CDATA[In App Info> Other permissions> Allow Show on Lock screen/ Open new windows while running in the background (If your device does not have this permission, you can ignore it)]]></string>
    <string name="title_more_help">Installation Guide</string>
    <string name="title_setting_more_help">If the warning screen can’t pop up on the lock screen, you can try to set “lock screen display”.</string>
    <string name="add_successfully">Add successfully</string>
    <string name="vibrate">Vibrate</string>
    <string name="txt_content_dialog_audio_permission">You must allow Audio record permission to use this feature.</string>
    <string name="notification_permission">Notification Permission</string>
    <string name="txt_content_dialog_notification_permission">You must allow Notification permission to use this feature.</string>


</resources>