<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="40dp"
    android:background="@drawable/bg_dialog_no_internet"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="24dp"
    android:paddingBottom="36dp">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium_500"
        android:gravity="center_vertical"
        android:text="@string/no_internet"
        android:includeFontPadding="false"
        android:textColor="@color/black_1"
        android:layout_marginHorizontal="24dp"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/txtContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/poppins_medium_500"
        android:text="@string/content_information_more_help"
        android:textColor="#80000305"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/btnAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_retry_internet"
        android:fontFamily="@font/poppins_semi_bold_600"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingHorizontal="26dp"
        android:paddingVertical="10dp"
        android:text="@string/retry_internet"
        android:textColor="@color/white"
        android:textSize="18sp" />


</LinearLayout>