<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="16dp"
    android:background="@drawable/bg_dialog_no_internet"
    android:paddingHorizontal="12dp"
    android:paddingVertical="24dp">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium_500"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/quit_title"
        android:textColor="@color/black_1"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="12dp" />

    <TextView
        android:id="@+id/txtContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins_medium_500"
        android:gravity="center"
        android:includeFontPadding="false"
        android:layout_marginTop="14dp"
        android:paddingHorizontal="20dp"
        android:text="@string/txt_content_quit_editing"
        android:textColor="#80000305"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_retry_internet"
        android:fontFamily="@font/poppins_semi_bold_600"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:includeFontPadding="false"
        android:paddingHorizontal="25dp"
        android:paddingVertical="10dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnQuit"
        app:layout_constraintTop_toBottomOf="@+id/txtContent" />

    <TextView
        android:id="@+id/btnQuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semi_bold_600"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingHorizontal="25dp"
        android:paddingVertical="10dp"
        android:text="@string/quit_txt"
        android:textColor="@color/black_1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSave"
        app:layout_constraintTop_toTopOf="@+id/btnSave"
        app:layout_constraintBottom_toBottomOf="@+id/btnSave"/>


</androidx.constraintlayout.widget.ConstraintLayout>