<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="16dp"
    android:background="@drawable/bg_dialog_no_internet"
    android:paddingHorizontal="12dp"
    android:paddingVertical="24dp">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium_500"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/overlay_permission_enable"
        android:textColor="@color/black_1"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins_medium_500"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingHorizontal="20dp"
        android:text="@string/title_dialog_overlay_permission"
        android:textColor="#80000305"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <TextView
        android:id="@+id/btnGotoSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_retry_internet"
        android:fontFamily="@font/poppins_semi_bold_600"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:includeFontPadding="false"
        android:paddingHorizontal="25dp"
        android:paddingVertical="10dp"
        android:text="@string/go_to_setting"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/txtContent"
        app:layout_constraintStart_toStartOf="@+id/txtContent"
        app:layout_constraintTop_toBottomOf="@+id/txtContent" />

</androidx.constraintlayout.widget.ConstraintLayout>