<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.menu.MenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:padding="4dp">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:includeFontPadding="false"
            android:fontFamily="@font/poppins_medium_500"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:text="@string/app_name"
            android:textColor="@color/black_1"
            android:textSize="22sp" />

        <View
            android:layout_width="48dp"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLanguage"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_language" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:includeFontPadding="false"
            android:fontFamily="@font/poppins_medium_500"
            android:gravity="center_vertical"
            android:text="@string/language"
            android:textColor="@color/black_1"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llShareApp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="4dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_share_app" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:includeFontPadding="false"
            android:fontFamily="@font/poppins_medium_500"
            android:gravity="center_vertical"
            android:text="@string/share_app"
            android:textColor="@color/black_1"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRateApp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="4dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_rate_app" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:includeFontPadding="false"
            android:fontFamily="@font/poppins_medium_500"
            android:gravity="center_vertical"
            android:text="@string/rate_app"
            android:textColor="@color/black_1"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSendFeedback"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="4dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_send_feadback" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:includeFontPadding="false"
            android:fontFamily="@font/poppins_medium_500"
            android:gravity="center_vertical"
            android:text="@string/send_feedback"
            android:textColor="@color/black_1"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPrivacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="4dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_privacy_policy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:includeFontPadding="false"
            android:fontFamily="@font/poppins_medium_500"
            android:gravity="center_vertical"
            android:text="@string/privacy_policy"
            android:textColor="@color/black_1"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMoreApp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="4dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_more_app" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:includeFontPadding="false"
            android:fontFamily="@font/poppins_medium_500"
            android:gravity="center_vertical"
            android:text="@string/more_app"
            android:textColor="@color/black_1"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>